[package]
name = "valord-map"
version = "0.3.0"
edition = "2021"
authors = ["tedious"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tediou5/valord-map"
documentation = "https://docs.rs/valord-map/latest/valord_map"
description = "A dictionary sorted by values."
keywords = ["map", "sort-map", "sort-by-value"]

[dependencies]
tracing = { version = "0.1.40" }
tokio = { version = "1.37.0", features = ["sync"] }
indexmap = "2.2.6"

[dev-dependencies]
anyhow = "1.0.83"
etcd-client = { version = "0.12.4", features = ["tls"] }
tokio = { version = "1.37.0", features = ["full"] }

[[example]]
name = "etcd_watcher"
