[package]
name = "valord-map"
version = "0.8.0"
edition = "2021"
authors = ["tedious"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tediou5/valord-map"
documentation = "https://docs.rs/valord-map/latest/valord_map"
description = "A dictionary sorted by values."
keywords = ["map", "sort-map", "sort-by-value"]

[dependencies]
indexmap = "2.2.6"

[[example]]
name = "people_ord_by_age"
